Aggiunta pagina spesa

--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               "node_modules/bootstrap-italia/dist/css/bootstrap-italia.min.css"
             ],
             "scripts": [
+              "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/jquery/dist/jquery.slim.js",
               "node_modules/bootstrap-italia/dist/js/bootstrap-italia.min.js"
             ]
