--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-italia": "^1.3.10",
     "http-server": "^0.12.1",
     "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
