--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "resolveJsonModule" : true,
+    "esModuleInterop": true,
+
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
