--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "angularfire2": "^5.4.2",
     "bootstrap-italia": "^1.3.10",
+    "firebase": "^7.11.0",
     "http-server": "^0.12.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
