--- a/package.json
+++ b/package.json
@@ -2,55 +2,56 @@
   "name": "coviditalyng",
   "version": "0.0.0",
   "scripts": {
-  "ng": "ng",
-  "start": "ng serve",
-  "build": "ng build --prod --build-optimizer=false",
-  "test": "ng test",
-  "lint": "ng lint",
-  "e2e": "ng e2e"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod --build-optimizer=false",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-  "@amcharts/amcharts4": "^4.9.6",
-  "@amcharts/amcharts4-geodata": "^4.1.12",
-  "@angular/animations": "~9.0.5",
-  "@angular/common": "~9.0.5",
-  "@angular/compiler": "~9.0.5",
-  "@angular/core": "~9.0.5",
-  "@angular/forms": "~9.0.5",
-  "@angular/platform-browser": "~9.0.5",
-  "@angular/platform-browser-dynamic": "~9.0.5",
-  "@angular/router": "~9.0.5",
-  "angularfire2": "^5.4.2",
-  "bootstrap-italia": "^1.3.10",
-  "firebase": "^7.11.0",
-  "http-server": "^0.12.1",
-  "jquery": "^3.4.1",
-  "popper.js": "^1.16.1",
-  "rxjs": "~6.5.4",
-  "tslib": "^1.10.0",
-  "zone.js": "~0.10.2"
+    "@amcharts/amcharts4": "^4.9.6",
+    "@amcharts/amcharts4-geodata": "^4.1.12",
+    "@angular/animations": "~9.0.5",
+    "@angular/common": "~9.0.5",
+    "@angular/compiler": "~9.0.5",
+    "@angular/core": "~9.0.5",
+    "@angular/forms": "~9.0.5",
+    "@angular/platform-browser": "~9.0.5",
+    "@angular/platform-browser-dynamic": "~9.0.5",
+    "@angular/router": "~9.0.5",
+    "@angular/service-worker": "~9.0.5",
+    "angularfire2": "^5.4.2",
+    "bootstrap-italia": "^1.3.10",
+    "firebase": "^7.11.0",
+    "http-server": "^0.12.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-  "@angular-devkit/build-angular": "~0.900.5",
-  "@angular/cli": "~9.0.5",
-  "@angular/compiler-cli": "~9.0.5",
-  "@angular/language-service": "~9.0.5",
-  "@types/jasmine": "~3.5.0",
-  "@types/jasminewd2": "~2.0.3",
-  "@types/node": "^12.11.1",
-  "codelyzer": "^5.1.2",
-  "install-peers": "^1.0.3",
-  "jasmine-core": "~3.5.0",
-  "jasmine-spec-reporter": "~4.2.1",
-  "karma": "~4.3.0",
-  "karma-chrome-launcher": "~3.1.0",
-  "karma-coverage-istanbul-reporter": "~2.1.0",
-  "karma-jasmine": "~2.0.1",
-  "karma-jasmine-html-reporter": "^1.4.2",
-  "protractor": "~5.4.3",
-  "ts-node": "~8.3.0",
-  "tslint": "~5.18.0",
-  "typescript": "~3.7.5"
+    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular/cli": "~9.0.5",
+    "@angular/compiler-cli": "~9.0.5",
+    "@angular/language-service": "~9.0.5",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "install-peers": "^1.0.3",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5"
   }
-  }
+}
